# recycle_cost_tool

./: .gitignore  EverBatt 2023.xlsm  LICENSE  README.md  app.py  main.py  pyproject.toml
docs/analysis/: everbatt_analysis.json  everbatt_logic.md  migration_checklist.md  scenario_matrix_comparison.md  vba_olevba.txt
scripts/: analyze_everbatt.py  compare_excel_matrix.py  run_scenario.py
src/recycle_cost/: __init__.py  app_services.py  cathode.py  cm_recovery.py  custom_chemistry.py  disassembly.py  extractors.py  formula_backend.py  i18n.py  manufacturing.py  mat_conv.py  model.py  new_flow_parameters.py  output_parity.py  parameters.py  preprocessing.py  reporting.py  reporting_snapshots.py  schemas.py  transport.py  ui_pages.py  ui_sections.py  ui_sidebar.py  ui_status.py  ui_style.py  workbook.py
tests/: test_app_services.py  test_cathode.py  test_cm_recovery.py  test_custom_nmc.py  test_dashboard_modules.py  test_extractors.py  test_i18n.py  test_manufacturing.py  test_mat_conv.py  test_new_recycling_model.py  test_preprocessing_cost.py  test_recycling_flow_variants.py  test_reporting.py  test_scenarios.py  test_ui_report.py  test_ui_sidebar.py  test_ui_status.py
