[project]
name = "recycle-cost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "formulas>=1.3.4",
    "oletools>=0.60.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recycle_cost"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
