[project]
name = "recycle-cost"
version = "0.3.0"
description = "Python and Streamlit migration of the EverBatt battery recycling cost model"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "formulas>=1.3.4",
    "oletools>=0.60.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recycle_cost"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
